# yet_flutter/assets/openapi.json
@@ -586,6 +586,13 @@
               }
             ],
             "title": "Deleted At"
+          },
+          "target_group_ids": {
+            "items": {
+              "type": "integer"
+            },
+            "type": "array",
+            "title": "Target Group Ids"
           }
         },
         "type": "object",
@@ -664,8 +671,7 @@
             "anyOf": [
               {
                 "items": {
-                  "additionalProperties": true,
-                  "type": "object"
+                  "$ref": "#/components/schemas/ActionInputField"
                 },
                 "type": "array"
               },
